<resources>
    <string name="app_name">TandazaFc</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_account">New Account</string>
    <string name="sign_in_text">Sign In on Tandaza Football Club</string>
    <string name="email">Email Address</string>
    <string name="less">less</string>
    <string name="anonymous">Post as anonymous</string>
    <string name="article_title">Article Title</string>
    <string name="article_content">Article Content</string>
    <string name="attach_photo">Attach Photo</string>

    <string name="like">Like</string>
    <string name="fullnames">Full Names</string>
    <string name="send">Send Details</string>
    <string name="select_your_game">Select Your Game</string>
    <string name="nationality">Nationality</string>
    <string name="playerPos">Playing Position</string>
    <string name="Date_of_birth">Date of Birth</string>
    <string name="jerseyNo">Jersey Number you would prefer.</string>
    <string name ="tagline">Send above details to join Tandaza Football team</string>
    <string name="password">Password</string>
    <string name="loading">Loading&#8230;</string>
    <string name="social_option">Or</string>
    <string name = "error_pass_no_match">Password do not match</string>
    <string name="error_image">No Image</string>
    <string name="select_an_image">Please select an image</string>
    <string name="camera">Camera</string>
    <string name="no_camera">Sorry, your device does not support camera functionality. Please choose image from gallery.</string>
    <string name="save_error">There was a problem saving the file</string>
    <string name="gallery">Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_up_info">Don\'t have an account?Sign Up</string>
    <string name="welcome_name">WELCOME TO TANDAZA FOOTBALL CLUB MOBILE SYSTEM</string>
    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="top_stories">Top Stories</string>
    <string name="photos">My Photos</string>
    <string name="my_quotes">My Quotes</string>
    <string name="select_sport">Select Your Game</string>
    <string name= "officials">Games Officials</string>
    <string name="leagues">Leagues</string>
    <string name="invite_users">Invite Friends</string>
    <string name="config">Configuration</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="comments">Comments</string>
    <string name="read">Read More</string>
    <string name="from_text">From</string>
    <string name="share">Share</string>
    <string name="error_empty_fields">Please fill this field</string>
    <string name="error_weak_pass">Password is too weak</string>
    <string name="single_msg_dialog">Please ensure you are connected to the internet </string>
    <string name="ok">OK</string>
    <string name="sign_up_text">Sign Up to Tandaza football club mobile System</string>
    <string name="add_photo">Add Photo</string>
    <string name="username">Username</string>
    <string name="privacy"><![CDATA[By signing up you agree to our Terms of Use & Privacy Policy]]></string>
    <string name="sign_in_info">Already have an account? Log In</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="connection_error">Please make sure that you are connected to Internet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
