<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/username_icon"
        android:title="@string/my_profile" />

    <item
        android:id="@+id/nav_officials"
        android:icon="@drawable/ic_interests"
        android:title="@string/officials" />
    <item
        android:id="@+id/nav_leagues"
        android:icon="@drawable/logo_sm"
        android:title="@string/leagues" />

    <item
        android:id="@+id/nav_invite"
        android:icon="@drawable/ic_interests"
        android:title="@string/invite_users" />

</group>
    <item android:title="@string/config">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_log_out"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>
