<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_grey"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:src="@drawable/tandaza1"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@color/colorAccent"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:visibility="invisible"
        android:text="@string/loading"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="false"
        android:layout_gravity="bottom">

        <LinearLayout
            android:id="@+id/loginLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_grey"
                app:hintTextAppearance="@style/FormHintStyle">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user_ic"
                    android:drawableTint="@color/text_grey"
                    android:drawablePadding="10dp"
                    android:hint="@string/username"
                    android:ems="10"
                    android:textColor="@color/text_grey"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_grey"
                app:hintTextAppearance="@style/FormHintStyle">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/pass_ic"
                    android:drawableTint="@color/text_grey"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:textColor="@color/text_grey"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:id="@+id/login"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>

                <TextView
                    android:id="@+id/social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/social_option"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:textColor="@color/text_grey"/>

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>

            </LinearLayout>


            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_info"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:layout_gravity="bottom"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
