<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context="com.example.walterorando.yrproject.activities.AccountActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true">


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:id="@+id/imageView"
            android:contentDescription="@string/app_name"
            android:src="@drawable/tandaza1"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_name"
            android:gravity="center"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@color/colorAccent"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_gravity="center"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/login"
            style="?android:attr/buttonBarButtonStyle"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_transparent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:id="@+id/newAcc"
            style="?android:attr/buttonBarButtonStyle"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_transparent"
            android:textStyle="bold"/>

    </LinearLayout>



</RelativeLayout>